--- a/404.html
+++ b/404.html
@@ -5,7 +5,30 @@
 </head>
 <body>
 <script>
-  window.location = '/vanila-js-online-store';
+  // window.location = '/vanila-js-online-store';
+
+  function createIncrement(incBy) {
+    let value = 0;
+
+    function increment() {
+      value += incBy;
+      console.log(value);
+    }
+
+    const message = `Current value is ${value}`;
+
+    function log() {
+      console.log(message);
+    }
+
+    return [increment, log];
+  }
+  const [increment, log] = createIncrement(1);
+  increment(); // logs 1
+  increment(); // logs 2
+  increment(); // logs 3
+  // Does not work!
+  log();       // logs "Current value is 0"
 </script>
 </body>
 </html>
